--- a/SMFL_01/SMFL_01/SMFL_01.vcxproj
+++ b/SMFL_01/SMFL_01/SMFL_01.vcxproj
@@ -165,9 +165,12 @@
     <ClInclude Include="FormulaOne.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameWindow.h" />
+    <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Manager.h" />
     <ClInclude Include="MonsterTruck.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Projectile.h" />
     <ClInclude Include="Vehicule.h" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +180,8 @@
     <ClCompile Include="FormulaOne.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameWindow.cpp" />
+    <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Manager.cpp" />
     <ClCompile Include="MonsterTruck.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -185,7 +190,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="SMFL_01.cpp" />
+    <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Vehicule.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
