--- a/SMFL_01/SMFL_01/SMFL_01.vcxproj
+++ b/SMFL_01/SMFL_01/SMFL_01.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="UIText.h" />
     <ClInclude Include="Vehicule.h" />
   </ItemGroup>
   <ItemGroup>
@@ -196,6 +197,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="UIText.cpp" />
     <ClCompile Include="Vehicule.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
