Boot Menu Manager
New class to handle boot menu 
Need GameManager refacto for currentEntityList

--- a/SMFL_01/SMFL_01/SMFL_01.vcxproj
+++ b/SMFL_01/SMFL_01/SMFL_01.vcxproj
@@ -162,6 +162,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Background.h" />
+    <ClInclude Include="BootMenuManager.h" />
     <ClInclude Include="DebugCustom.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
@@ -179,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Background.cpp" />
+    <ClCompile Include="BootMenuManager.cpp" />
     <ClCompile Include="DebugCustom.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
