--- a/SMFL_01/SMFL_01/SMFL_01.vcxproj.filters
+++ b/SMFL_01/SMFL_01/SMFL_01.vcxproj.filters
@@ -87,9 +87,6 @@
     <ClInclude Include="pch.h">
       <Filter>Fichiers d%27en-tête\Window</Filter>
     </ClInclude>
-    <ClInclude Include="Manager.h">
-      <Filter>Fichiers d%27en-tête\Managers</Filter>
-    </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>Fichiers d%27en-tête\Managers</Filter>
     </ClInclude>
@@ -103,6 +100,12 @@
       <Filter>Fichiers d%27en-tête\UI</Filter>
     </ClInclude>
     <ClInclude Include="BootMenuManager.h">
+      <Filter>Fichiers d%27en-tête\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="SplashScreenManager.h">
+      <Filter>Fichiers d%27en-tête\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="EntityFactory.h">
       <Filter>Fichiers d%27en-tête\Managers</Filter>
     </ClInclude>
   </ItemGroup>
@@ -137,9 +140,6 @@
     <ClCompile Include="pch.cpp">
       <Filter>Fichiers sources\Window</Filter>
     </ClCompile>
-    <ClCompile Include="Manager.cpp">
-      <Filter>Fichiers sources\Managers</Filter>
-    </ClCompile>
     <ClCompile Include="InputManager.cpp">
       <Filter>Fichiers sources\Managers</Filter>
     </ClCompile>
@@ -156,6 +156,12 @@
       <Filter>Fichiers sources\UI</Filter>
     </ClCompile>
     <ClCompile Include="BootMenuManager.cpp">
+      <Filter>Fichiers sources\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="SplashScreenManager.cpp">
+      <Filter>Fichiers sources\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="EntityFactory.cpp">
       <Filter>Fichiers sources\Managers</Filter>
     </ClCompile>
   </ItemGroup>
