Init player from text file
HUD Manager base

--- a/SMFL_01/SMFL_01/SMFL_01.vcxproj
+++ b/SMFL_01/SMFL_01/SMFL_01.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="FormulaOne.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameWindow.h" />
+    <ClInclude Include="HUDManager.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="MonsterTruck.h" />
@@ -190,6 +191,7 @@
     <ClCompile Include="FormulaOne.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameWindow.cpp" />
+    <ClCompile Include="HUDManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Loader.cpp" />
     <ClCompile Include="main.cpp" />
